--- a/pages/store.html
+++ b/pages/store.html
@@ -36,6 +36,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="tour.html">Tour</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="checkout.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                        </svg>
+                      </a>
+                  </li>
                 </ul>
             </div>
         </div>
@@ -43,7 +50,7 @@
 
     <div class="container-fluid head-container" style="padding: 50px; min-width: 100%;">
       <h1>Store</h1>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg-body-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Sections</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,42 +111,35 @@
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Tops</h5>
-                    <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Hats</h5>
-                    <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Accessories</h5>
-                    <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Posters</h5>
-                    <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Albums</h5>
-                    <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Check It Out!</a>
-                  </div>
                 </div>
                 <div class="carousel-item c-item">
                   <img src="../images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-primary">Tickets</h5>
-                    <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Check It Out!</a>
                   </div>
                 </div>
               </div>
@@ -153,6 +153,9 @@
           </div>
         
       </div>
+
+      <br>
+      <a href="Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary store-button">Check It Out!</a>
           
         <script src="../js/bootstrap.bundle.js"></script>
     </body>
