--- a/pages/Store_Subpages/Categories_Pages/albums.html
+++ b/pages/Store_Subpages/Categories_Pages/albums.html
@@ -14,8 +14,8 @@
     <body>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="padding-top: 1em; padding-bottom: 1em;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="../../../images/stage fright.png" alt="logo" width="70" height="70">
+                <a class="navbar-brand" href="../../../index.html">
+                    <img src="../../../images/stage_fright.png" alt="logo" width="70" height="70">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
