--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -16,14 +16,14 @@
 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="padding-top: 1em; padding-bottom: 1em;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="../images/stage fright.png" alt="logo" width="70" height="70">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../images/stage_fright.png" alt="logo" width="70" height="70">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto navbar-main">
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html">Home</a>
                         </li>
@@ -37,11 +37,11 @@
                             <a class="nav-link" href="tour.html">Tour</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
-                                </svg>
-                            </a>
+                          <a class="nav-link active" href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                            </svg>
+                          </a>
                         </li>
                     </ul>
                 </div>
@@ -71,7 +71,7 @@
                 <form>
                     <div class="form-group f-input">
                     <label for="inputEmail">Email address:</label>
-                    <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email" required>
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Enter email" required>
                     </div>
                     <div class="form-group f-input">
                     <label for="inputNumber">Phone Number:</label>
@@ -79,7 +79,7 @@
                     </div>
                     <div class="form-group f-input">
                     <label for="inputShipping">Address:</label>
-                    <input type="text" class="form-control" id="inputNumber" placeholder="Shipping Address" required>
+                    <input type="text" class="form-control" id="inputShipping" placeholder="Shipping Address" required>
                     </div>
                     <button type="submit" class="btn btn-primary f-button">Place Order</button>
                 </form>
