--- a/index.html
+++ b/index.html
@@ -13,91 +13,158 @@
     </head>
     <body>
       <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="padding-top: 1em; padding-bottom: 1em;">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="images/stage_fright.png" alt="logo" width="70" height="70">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto navbar-main">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/music.html">Music</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Store
-                            </a>
-                            <ul class="dropdown-menu store-menu">
-                              <li class="nav-item">
-                                <a class="nav-link" href="pages/store.html">Storefront</a>
-                              </li>
-                              <li class="sub-menu">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  Collections
-                                </a>
-                                <ul class="dropdown-menu store-menu">
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col1.html">Venomous Predator</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col3.html">Locked Away</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col4.html">Carnival of Insanity</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col5.html">Devoid of Light</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
-                                </ul>
-                              </li>
-                              <li class="sub-menu">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
-                                  Categories
-                                </a>
-                                <ul class="dropdown-menu store-menu">
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/tops.html">Tops</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/hats.html">Hats</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/other.html">Accessories</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/posters.html">Posters</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/albums.html">Albums</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/tickets.html">Tickets</a></li>
-                                </ul>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="pages/Store_Subpages/all.html">All</a>
-                              </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/tour.html">Tour</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="pages/checkout.html">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
-                            </svg>
-                          </a>
+          <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                  <img src="images/stage_fright.png" alt="logo" width="70" height="70">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav ml-auto navbar-main">
+                      <li class="nav-item">
+                          <a class="nav-link active" href="#">Home</a>
                       </li>
-                    </ul>
+                      <li class="nav-item">
+                          <a class="nav-link" href="pages/music.html">Music</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Store
+                          </a>
+                          <ul class="dropdown-menu store-menu">
+                            <li class="nav-item">
+                              <a class="nav-link" href="pages/store.html">Storefront</a>
+                            </li>
+                            <li class="sub-menu">
+                              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Collections
+                              </a>
+                              <ul class="dropdown-menu store-menu">
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col1.html">Venomous Predator</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col3.html">Locked Away</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col4.html">Carnival of Insanity</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col5.html">Devoid of Light</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
+                              </ul>
+                            </li>
+                            <li class="sub-menu">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+                                Categories
+                              </a>
+                              <ul class="dropdown-menu store-menu">
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/tops.html">Tops</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/hats.html">Hats</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/other.html">Accessories</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/posters.html">Posters</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/albums.html">Albums</a></li>
+                                <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/tickets.html">Tickets</a></li>
+                              </ul>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="pages/Store_Subpages/all.html">All</a>
+                              </li>
+                          </ul>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="pages/tour.html">Tour</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="pages/checkout.html">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                          <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                          </svg>
+                        </a>
+                    </li>
+                  </ul>
+              </div>
+          </div>
+      </nav>
+
+
+      <div class="containter-fluid title-container d-flex justify-content-center">
+          <img src="images/stage_fright.png" alt="logo" class="img-fluid logo-img">
+      </div>
+      <div class="bg-image d-flex container container-fluid GBNF-container justify-content-center align-items-center text-center pt-3">
+        <div class="row">
+          <h1>New Music</h1>
+        </div>
+        <div class="row d-flex flex-col justify-content-center align-items-center">
+          <img src="images/GBNF-album.png" alt="GBNF" class="img-fluid float-left GBNF-img">
+          <div class="d-flex flex-col text-center mb-5">
+            <h2 class="text-center">Gone But <br> Not Forgotten <br> 
+              <a href="pages/music.html" class="btn btn-primary GBNF-button">Information</a>
+            </h2>
+          </div>
+        </div>        
+      </div>
+
+
+      <div class="d-flex container container-fluid store-container justify-content-center align-items-center bg-dark">
+        <div class="row py-3">
+          <h1>New Merchandise</h1>
+        </div>
+        <div class="row">
+          <div class="col-lg store">
+            <div id="storeCarousel" class="carousel slide carousel-fade">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                  <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                  <button type="button" data-bs-target="#storeCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
                 </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active c-item">
+                    <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="text-primary">Tops</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item c-item">
+                    <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="text-primary">Hats</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item c-item">
+                    <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="text-primary">Accessories</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item c-item">
+                    <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="text-primary">Posters</h5>
+                    </div>
+                  </div>
+                  <div class="carousel-item c-item">
+                    <img src="images/blank-1886013_640.png" class="d-block mx-auto w-50 c-image" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5 class="text-primary">Albums</h5>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#storeCarousel" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#storeCarousel" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                </button>
+              </div>
             </div>
-        </nav>
-
-
-        <div class="containter-fluid title-container d-flex justify-content-center">
-            <img src="images/stage_fright.png" alt="logo" class="img-fluid logo-img">
+          </div>
         </div>
 
-        <div class="bg-dark d-flex container containter-fluid new-music-container justify-content-center align-items-center">
-            <h1>New Music</h1>
-        </div>
-        <div class="bg-image d-flex container container-fluid GBNF-container justify-content-center align-items-center">
-            <img src="images/GBNF-album.png" alt="GBNF" class="img-fluid GBNF-img">
-            <div class="GBNF-text">
-            <h1>Gone But <br> Not Forgotten <br></h1>
-            <a href="pages/music.html" class="btn btn-primary GBNF-button">Information</a>
-        </div>
+        <a href="pages/store.html" class="btn btn-primary store-button my-3">Check It Out!</a>
+      
+      </div>
 
-        <script src="js/bootstrap.bundle.js"></script>
+      
+
+      <script src="js/bootstrap.bundle.js"></script>
     </body>
 </html>
 
